--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-FLASK_APP=flaskr
+FLASK_APP=wsgi.py
 FLASK_ENV=development
 SECRET_KEY=secret
+FLASK_BASE_URL=http://127.0.0.1:5000
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_BASE_URL=
 SQLALCHEMY_DATABASE_URI=sqlite:///\\site.db
-GOOGLE_CLIENT_ID=Your_GOOGLE_CLIENT_ID
-GOOGLE_CLIENT_SECRET=Your_GOOGLE_CLIENT_SECRET
-OAUTHLIB_INSECURE_TRANSPORT=1
